# sjconf-lilo

./: .gitignore  ChangeLog  Makefile.am  README.rst  configure.ac
confs/: lilo.conf
debian/: changelog  control  copyright  rules  sjconf-lilo.install  sjconf-lilo.postinst  sjconf-lilo.postinst.debhelper  sjconf-lilo.preinst  sjconf-lilo.prerm  sjconf-lilo.prerm.debhelper  sjconf-lilo.substvars
doc/: Makefile.am  sjconf-lilo.t2t
plugins/: lilo.py.in
templates/: Makefile.am
templates/lilo/: Makefile.am  lilo.conf
